# BlurHarmonics

./: .gitignore  CMakeLists.txt  maxConfigure.bat  mayaConfigure.bat  meson.build  quick_compile.bat
.github/workflows/: main.yml
Examples/: complexPlot.py  simplePlot.py
Useful/: blindComplexDataCmd.cpp  blindDoubleDataCmd.cpp  harmPlot3.py
lib/: harmonicSolver.cpp  harmonicSolver.h
max/: DllEntry.cpp  FloatSpringController.rc  harmonicController.cpp  harmonicController.def  harmonicController.h  harmonicController.rc  haromicController.cpp  resource.h
maya/: harmonics.cpp  harmonics.h  harmonicsNode.cpp  harmonicsNode.h  mapData.cpp  mapData.h  pluginMain.cpp
maya/AETemplates/: AEharmonicsTemplate.xml
modules/: Find3dsMax.cmake
scripts/: AEharmonicsTemplate.mel  complexPlot.py  harmTemplate.py
src/maya/: harmonicsNode.h  mapData.cpp
subprojects/maya/: meson.build  meson.options
